--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <title>Basic-JavaScript</title>
 </head>
 <body>
-    
+    <div class="hello">
+        <h1>Grap me! 1</h1>
+    </div>
+    <div class="hello">
+        <h1>Grap me! 2</h1>
+    </div>
+    <div class="hello">
+        <h1>Grap me! 3</h1>
+    </div>
+    <script src="./app.js"></script>
 </body>
-
-<script src="./app.js"></script>
 </html>
