--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="hello">
-        <h1>Grap me! 1</h1>
+        <h1>Click me!</h1>
     </div>
     <div class="hello">
         <h1>Grap me! 2</h1>
