--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
     <title>Basic-JavaScript</title>
 </head>
 <body>
-    <div class="hello">
+    <div class="hello" class="index-font">
         <h1>Click me!</h1>
-    </div>
-    <div class="hello">
-        <h1>Grap me! 2</h1>
-    </div>
-    <div class="hello">
-        <h1>Grap me! 3</h1>
     </div>
     <script src="./app.js"></script>
 </body>
