--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Basic-JavaScript</title>
 </head>
 <body>
-    <div class="hello" class="index-font">
-        <h1>Click me!</h1>
-    </div>
+    <form id="login-form">
+    <input type="text" placeholder="What is your name?">
+    <button>Log In</button>
     <script src="./app.js"></script>
+    </form>
 </body>
 </html>
