--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <form id="login-form">
     <input type="text" placeholder="What is your name?">
     <button>Log In</button>
-    <script src="./app.js"></script>
-    </form>
+</form>
+<a href="https://nomadcoders.co">Go to courses</a>
+
+<script src="./app.js"></script>
 </body>
 </html>
