--- a/practic.html
+++ b/practic.html
@@ -4,14 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./practice2.css">
-    <title>챌린지 코드</title>
+    <link rel="stylesheet" href="./practic.css">
+    <title>챌린지 코드 2</title>
 </head>
-<body class = "bodyColor">
-    <div class = "main-box">
-        <div class="main-box1"></div>
-        <div class="main-box2"></div>
-        <div class="main-box1"></div>
-    </div>
+<body>
+    <h1>The best Color</h1>
+   <section>
+        <div class="main__box">
+            <div class="main__box_color"></div>
+            <div class="main__box_text">
+                <h3>Tomato</h3>
+                <h5>#FF6347</h5>
+            </div>
+        </div>
+
+        <div class="main__box">
+            <div class="main__box_color"></div>
+            <div class="main__box_text">
+                <h3>Teal</h3>
+                <h5>#008080</h5>
+            </div>
+        </div>
+
+        <div class="main__box">
+            <div class="main__box_color"></div>
+            <div class="main__box_text">
+                <h3>Burlywood</h3>
+                <h5>#DEB887</h5>
+            </div>
+        </div>
+        
+        <div class="main__box">
+            <div class="main__box_color"></div>
+            <div class="main__box_text">
+                <h3>Thistle</h3>
+                <h5>#D7BFD7</h5>
+            </div>
+        </div>
+   </section>
+    
 </body>
 </html>
