--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <title>Basic-JavaScript</title>
 </head>
 <body>
-    <form id="login-form">
-    <input type="text" placeholder="What is your name?">
-    <button>Log In</button>
+<form id="login-form">
+    <input required maxlength="15" type="text" placeholder="What is your name?" />
+    <input type="submit" value="Log In">
 </form>
-<a href="https://nomadcoders.co">Go to courses</a>
-
-<script src="./app.js"></script>
+    <h1 id ="greeting "class="hidden"></h1>
+<script src="app.js"></script>
 </body>
 </html>
