--- a/test.html
+++ b/test.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src ='./4.inheritance.js'></script>
     <title>자바스크립트 문법</title>
 </head>
 <body>
-    <script>
-        console.log('Hello world!');
-    </script>
+
 </body>
 </html>
